<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".DetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_detail_backdrop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/movie_poster" />

            <TextView
                android:id="@+id/tv_details_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="8dp"
                android:paddingBottom="8dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:shadowColor="@android:color/black"
                android:shadowDx="4"
                android:shadowDy="4"
                android:shadowRadius="4"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:text="Minions" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:elevation="5dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:padding="2dp"
                android:transitionName="transition"
                card_view:cardCornerRadius="3dp">

                <ImageView
                    android:id="@+id/iv_detail_poster"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/movie_poster" />

            </android.support.v7.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/original_title"
                        android:textColor="@color/colorWhite"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_original_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginTop="8dp"
                        android:textColor="@color/colorWhite"
                        android:textSize="12sp"
                        tools:text="Minyonok" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:paddingLeft="8dp"
                        android:text="@string/release_date"
                        android:textColor="@color/colorWhite"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_release_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:paddingLeft="8dp"
                        android:textColor="@color/colorWhite"
                        android:textSize="12sp"
                        tools:text="2017.02.23" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="8dp"
                    android:background="@color/colorWhite" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_weight="1">

                        <ProgressBar
                            android:id="@+id/circularProgressbar"
                            style="?android:attr/progressBarStyleHorizontal"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_centerInParent="true"
                            android:indeterminate="false"
                            android:max="100"
                            android:maxHeight="120dp"
                            android:progress="100"
                            android:progressDrawable="@drawable/circle_progressbar" />

                        <TextView
                            android:id="@+id/tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:gravity="center"
                            android:text="7.5"
                            android:textColor="@color/colorWhite"
                            android:textSize="15sp" />

                    </RelativeLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/iv_heart"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:layout_marginTop="8dp"
                            android:adjustViewBounds="true"
                            android:contentDescription="@string/favourite_button"
                            android:onClick="addToFavourites"
                            tools:src="@drawable/fav_button_default" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/tv_overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:paddingBottom="16dp"
            android:paddingTop="8dp"
            android:textColor="@color/colorWhite"
            tools:text="Lorem ipsum mamma el fadett rizsa rizsa blablab bla" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_details_empty_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/colorWhite"
                android:visibility="visible"
                tools:text="Problem" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_trailers"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp"
            android:text="@string/reviews"
            android:textColor="@color/colorWhite"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="4dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/available_only_in_english"
            android:textColor="@color/colorWhite"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/empty_review"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/there_are_no_reviews_yet"
            android:textColor="@color/colorWhite"
            android:textSize="12sp"
            android:visibility="gone" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_reviews"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp" />

    </LinearLayout>

</ScrollView>